--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <! DOCTYPE html>
 <html>
     <head>
-        <title>:)</title>
+        <title>Robin</title>
+        <meta name="viewport" content="width=device-width">
     </head>
     <body>
         <div id="root"></div>
