--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Robin</title>
+        <script src="/socket.io/socket.io.js"></script>
         <meta name="viewport" content="width=device-width">
     </head>
     <body>
