redo the entire thing because I forgot to commit

--- a/index.html
+++ b/index.html
@@ -1,12 +1,16 @@
 <! DOCTYPE html>
-<html>
+    <html>
+
     <head>
         <title>Robin</title>
         <script src="/socket.io/socket.io.js"></script>
+        <link rel="stylesheet" type="text/css" href="./dist/main.css">
         <meta name="viewport" content="width=device-width">
     </head>
+
     <body>
         <div id="root"></div>
-        <script type="text/javascript" src="bundle.js"></script>
+        <script type="text/javascript" src="./dist/main.js"></script>
     </body>
-</html>
+
+    </html>
